--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -32,3 +32,9 @@ jobs:
       - name: Build Project
         working-directory: ./build
         run: cmake --build .
+
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-artifacts
+          path: ./build/InstaOrder.exe  # Adjust this path if needed
