--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -30,6 +30,9 @@ jobs:
         working-directory: ./build
         run: cmake --build .
 
+      - name: List build directory
+        run: dir ./build
+        
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v2
         with:
