--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -31,10 +31,10 @@ jobs:
         run: cmake --build .
 
       - name: List build directory
-        run: dir ./build
+        run: dir ./build/Debug
         
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v2
         with:
           name: build-artifacts
-          path: ./build/InstaOrder.exe  # Adjust this path if needed
+          path: ./build/Debug/InstaOrder.exe  # Adjust this path if needed
