--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -16,6 +16,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Download and Install OpenSSL
+        run: |
+          Invoke-WebRequest -Uri "https://slproweb.com/download/Win64OpenSSL_Light-3_0_11.exe" -OutFile "openssl_installer.exe"
+          Start-Process "openssl_installer.exe" -ArgumentList "/silent /install" -NoNewWindow -Wait
+
+      - name: Set OPENSSL_ROOT_DIR environment variable
+        run: echo "OPENSSL_ROOT_DIR=C:/Program Files/OpenSSL/" >> $GITHUB_ENV
+
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
         with:
@@ -33,8 +42,11 @@ jobs:
         working-directory: ./build
         run: cmake --build .
 
+      - name: List build directory
+        run: dir ./build
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v2
         with:
           name: build-artifacts
-          path: ./build/InstaOrder.exe  # Adjust this path if needed
+          path: ./build/Debug/InstaOrder.exe  # Adjust this path if needed
